# highfleet-qol

./: Cargo.toml  README.md
.github/workflows/: cd.yml
src/: config.rs  dumpable.rs  guns.rs  lib.rs  parts.rs  patchy.rs  plane.rs  rng.rs  sell_multiplier.rs  shake.rs  ttl.rs  zoom.rs
src/structs/: cvec.rs  loadout.rs  mod.rs  plane.rs  tll.rs
