[package]
name = "anti-wobble"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
1_151 = []
1_163 = []

[dependencies]
log = "0.4.28"
mmap-rs = "0.6.*"
serde = { version = "1.0.221", features = ["derive"] }
serde_json = "1.0.144"

[dependencies.windows]
version = "0.*"
features = [
    "Win32_Foundation",
    "Win32_System_Memory",
]
